...
  );

  return (
    <ScrollView
      contentContainerStyle={[styles.container, themedStyles.container]}
      keyboardShouldPersistTaps="handled"
      testID="screen-comparison"
    >
      <Text style={[styles.title, themedStyles.title]} testID="screen-comparison-title">
        Comparar SAC vs Price
      </Text>
      <AdBanner enabled={showAds} />

...
