appId: com.lsimaocosta.calculadorapricesac
---
- killApp
- clearState
- evalScript: ${output.appReady = false}
- repeat:
    while:
      true: ${output.appReady == false}
    times: 4
    commands:
      - openLink:
          link: 'exp+calculadora-price-sac://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081&disableOnboarding=1'
      - tapOn:
          text: 'Continue'
          optional: true
      - tapOn:
          text: 'Go home'
          optional: true
      - tapOn:
          text: 'Fechar anúncio'
          optional: true
      - extendedWaitUntil:
          visible:
            id: 'screen-calculator'
          timeout: 15000
          optional: true
      - runFlow:
          when:
            visible:
              id: 'screen-calculator'
          commands:
            - evalScript: ${output.appReady = true}
- assertVisible:
    id: 'screen-calculator'
- tapOn:
    text: 'Fechar anúncio'
    optional: true
